# packet-demo

./: .gitignore  Readme.md
dashboard/: package-lock.json  package.json  server.mjs
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/explain/: page.tsx
dashboard/src/app/valves/: page.tsx
dashboard/src/components/pid/: pipe.tsx  pump.tsx  tank.tsx  valve.tsx
dashboard/src/components/shell/: right-rail.tsx  tab-nav.tsx
dashboard/src/lib/: use-demo-socket.ts
dashboard/src/lib/valves/: index.ts  server-seed.mjs  types.ts
dashboard/src/lib/valves/systems/: air.ts  bilge-ballast.ts  fire-main.ts  fresh-water.ts  fuel.ts  hydraulics.ts  lube-oil.ts  sea-water.ts  sewage.ts
firmware/: Cargo.toml
firmware-idf/: Cargo.toml  sdkconfig.defaults  shared
firmware-idf/.cargo/: config.toml
firmware-idf/ground/: Cargo.toml
firmware-idf/ground/src/: main.rs
firmware-idf/usv/: Cargo.toml
firmware-idf/usv/src/: main.rs
firmware/.cargo/: config.toml
firmware/alice/: Cargo.toml
firmware/alice/src/: main.rs
firmware/bob/: Cargo.toml
firmware/bob/src/: main.rs
firmware/shared/: Cargo.toml
firmware/shared/src/: frame.rs  lib.rs  pqxdh.rs  wire.rs
viewer/: package-lock.json  package.json  tsconfig.json
viewer/src/: dashboard.ts  index.ts
