[package]
name = "pqxdh-alice"
version = "0.1.0"
edition = "2021"

[dependencies]
pqxdh-shared = { path = "../shared" }
esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c3"] }
esp-wifi = { version = "=0.14.0", features = ["esp32c3", "esp-now"] }
esp-println = { version = "=0.14.0", features = ["esp32c3"] }
heapless = "0.8"
rand_core = "0.6"
