[package]
name = "pqxdh-alice"
version = "0.1.0"
edition = "2021"

[dependencies]
pqxdh-shared = { path = "../shared" }
esp-hal = { version = "=1.1.0-rc.0", features = ["esp32c3", "unstable"] }
esp-radio = { version = "=0.18.0", features = ["esp32c3", "esp-now", "unstable"] }
esp-rtos = { version = "=0.3.0", features = ["esp32c3", "esp-radio", "embassy"] }
esp-println = { version = "0.17", features = ["esp32c3"] }
esp-backtrace = { version = "0.19", features = ["esp32c3", "panic-handler", "println"] }
esp-alloc = "0.10"
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32c3"] }
embassy-executor = "0.10"
embassy-time = "0.4"
embassy-futures = "0.1"
heapless = "0.8"
rand_core = { version = "0.6", default-features = false }
