[package]
name = "pqxdh-shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []

[dependencies]
ml-kem = { version = "0.2.1", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["zeroize", "rand_core"] }
chacha20poly1305 = { version = "0.10.1", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
heapless = "0.8"
zeroize = { version = "1", default-features = false }
rand_core = { version = "0.6", default-features = false }
hybrid-array = { version = "0.2", default-features = false }

[dev-dependencies]
rand = "0.8"
